# neat-research

./: README.md  pyproject.toml
data/: acceleration_efficiency.csv  analytical_fitted_model-100_2000.csv  analytical_fitted_model-500_3000.csv  analytical_fitted_model.csv  results-100-30.txt  results-1000-30.txt  results-2000-30.txt  results-3000-30.txt  results-3000-60.txt  results-500-30.txt  results-5000-30.txt  workers-time-100.csv  workers-time-1000.csv  workers-time-2000.csv  workers-time-3000.csv  workers-time-500.csv  workers-time-5000.csv
src/analysis/: acceleration.py  charts.py  constants.py  data_helpers.py  estimation_Tp.py  estimation_based_on_model.py  metrics.py  model.py  model_fit.py  pareto_Tp.py  pareto_surface_pNT.py  plot_model_N.py  saturation_model.py
src/time-metric/: parameters.py  pareto_front.py  pareto_front_3d.py  pareto_p.py  time_metric.py
